# social-media-addiction

./: .gitignore  Dockerfile.api  Dockerfile.web  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
api/: main.py
api/routers/: collect.py  predict.py
api/schemas/: user_input.py  user_report.py
data/: migrate_data.py
notebooks/: social-media-addiction-detection-via-ml.ipynb
src/: config.py  data_ingestion.py  full_pipeline.py  preprocessing.py  train.py
tests/: test_api.py
